buildscript {
    repositories {
     //   mavenCentral()
    //    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    //    maven { url "https://oss.sonatype.org/content/repositories/releases/"}
        maven { url "https://plugins.gradle.org/m2/" }
        //  jcenter()
    }
    dependencies {
        classpath 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0.1"
    }
}

apply plugin: "org.sonarqube"

allprojects {
    apply plugin: "eclipse"
    apply plugin: "idea"
    apply plugin: "me.champeau.gradle.antlr4"
    apply plugin: "checkstyle"
    apply plugin: "java"

    // set antlr srcSet
    antlr4.source = file('../lib/parser')
    antlr4.output = file('../core/src/de/bioviz/parser/generated')
    antlr4.extraArgs = ['-package', 'de.bioviz.parser.generated']

    // add antlr4 to classpath
    configurations {
        compile.extendsFrom antlr4
    }
    
    checkstyle {
      toolVersion = "6.19"
      ignoreFailures = false
      showViolations = true
      configFile = rootProject.file('config/checkstyle/checkstyle.xml')
    }

    version = '1.0'
    ext {
        appName = 'BioViz'
        gdxVersion = '1.9.1'
        roboVMVersion = '1.0.0'
        box2DLightsVersion = '1.3'
        ashleyVersion = '1.3.1'
        aiVersion = '1.5.0'
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    repositories {
      mavenCentral()
    }

    sonarqube {
      properties {
        // Required metadata
        property "sonar.projectKey", "de.dfki.bioviz"
        property "sonar.projectName", "BioViz"
        property "sonar.projectVersion", "0.604"
        // Language
        property "sonar.language", "java"
        // Encoding of the source files
        property "sonar.sourceEncoding", "UTF-8"
      }
    }

}

tasks.eclipse.doLast {
    delete ".project"
}
